safari stretching images fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,42 @@ body {
   font-family: 'Roboto Mono', monospace;
 }
 
+.nav {
+  z-index: 9999999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  .navbar {
+    padding: 5px 0;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    border-bottom: 1px solid rgb(122, 122, 122);
+    color: black;
+    width: 100vw;
+    margin: 0;
+    align-items: center;
+    justify-content: left;
+    .navbar-item {
+      list-style: none;
+      margin: 0;
+      .link {
+        font-weight: bold;
+        font-size: 1.2em;
+        padding: 0 40px;
+        color: black;
+        .logo {
+          height: 100px;
+        }
+        &:hover {
+          cursor: pointer;
+          color: black;
+        }
+      }
+    }
+  }
+}
+
 .hero {
   height: 100vh;
   color: white;
@@ -93,6 +129,9 @@ body {
         padding: 10px;
         color: black;
         text-decoration: none;
+        img {
+          width: 100%;
+        }
         .github {
           text-decoration: none;
         }
